fix: product detail description alignment

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2378,7 +2378,7 @@ html, body, .homepage-body {
   }
 
   .detail-description {
-    text-aling: justify !important;
+    text-align: justify !important;
     line-height: 1.6;
     margin-top: 5px !important;
     margin-bottom: 20px !important;
